k8s/monitoring/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: gatus
  name: gatus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
    spec:
      containers:
        - image: ghcr.io/twin/gatus:latest@sha256:0009b90a11c042809f7f988c05c3f398dbf24b7498a0b7083efe3b9e8e126550
          imagePullPolicy: IfNotPresent
          name: gatus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: gatus-config
      volumes:
        - configMap:
            name: gatus-configmap
          name: gatus-config
