k8s/monitoring/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: "gatus"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gatus.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: gatus.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  name: http
